fix to seach bar misalignment caused by new font library

--- a/src/main/resources/files/ui/css/main.css
+++ b/src/main/resources/files/ui/css/main.css
@@ -4239,6 +4239,10 @@ background-color: #edeeee !important;
   vertical-align: baseline;
 }
 
+.align_middle{
+  vertical-align: middle;
+}
+
 .black {
   background-color: #000;
 }
